
Sat Feb 25 17:39:21 CET 2006 Paolo Molaro <lupus@ximian.com>

	* inssel.brg: style fixes, mostly to force the updated monoburg
	to run for people using svn.

Sat Feb 25 17:07:42 CET 2006 Paolo Molaro <lupus@ximian.com>

	* mini.c: match monoburg changes.

Sat Feb 25 16:04:33 CET 2006 Paolo Molaro <lupus@ximian.com>

	* mini.h, mini.c, abcremoval.c, aliasing.c, liveness.c,
	ssapre.c, graph.c, ssa.c: put the mono_burg_arity[]
	declaration in the header file.

Sat Feb 25 14:19:31 CET 2006 Paolo Molaro <lupus@ximian.com>

	* helpers.c: reduce relocations and mem usage.

Sat Feb 25 11:58:16 CET 2006 Paolo Molaro <lupus@ximian.com>

	* mini.h, mini-codegen.c: disable logging features if
	requested by configure.

Sat Feb 25 11:54:49 CET 2006 Paolo Molaro <lupus@ximian.com>

	* mini.c: tiny verifier changes.

Fri Feb 24 18:17:52 CET 2006 Paolo Molaro <lupus@ximian.com>

	* mini-ops.h, inssel-x86.brg, tramp-x86.c, mini-x86.c,
	cpu-pentium.md: stack alignment changes for osx/x86,
	partially from Geoff Norton <gnorton@customerdna.com>.

2006-02-24  Raja R Harinath  <harinath@gmail.com>

	* jit-icalls.c (helper_compile_generic_method): Update to changes
	in metadata/class.c.

2006-02-24  Zoltan Varga  <vargaz@gmail.com>
	
	* mini-amd64.c (mono_arch_get_vcall_slot_addr): Add a missing check.
	
	* mini-amd64.c (mono_arch_get_vcall_slot_addr): Add support for
	interface calls with large offsets.

2006-02-23  Raja R Harinath  <rharinath@novell.com>

	* jit-icalls.c (helper_compile_generic_method): Document the
	special-case we depend on so that we can inflate the method twice
	with the same context with no bad side-effects.

Thu Feb 23 13:45:46 CET 2006 Paolo Molaro <lupus@ximian.com>

	* mini-x86.c, mini-amd64.c: fix for case when xen support
	is disabled.

Wed Feb 22 19:38:40 CET 2006 Paolo Molaro <lupus@ximian.com>

	* mini-x86.c, mini-amd64.c: generate code to access tls items
	in a faster way for Xen systems.

Wed Feb 22 10:31:25 CET 2006 Paolo Molaro <lupus@ximian.com>
